--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   firebase_remote_config: ^5.1.2
   table_calendar: ^3.1.2
   flutter_map: ^7.0.2
+  flutter_sound: ^9.2.13
+  permission_handler: ^11.0.0
 
 dev_dependencies:
   flutter_test:
