--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_map: ^7.0.2
   flutter_sound: ^9.2.13
   permission_handler: ^11.0.0
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
